trying to fix api reqs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/dizzy (2).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Padilha's Animes</title>
+    <title>AnimeRec - Anime Recommendations</title>
+    <meta
+      name="description"
+      content="Discover amazing anime based on popularity, genre, and daily recommendations. Powered by the Jikan API."
+    />
+
+    <meta
+      property="og:title"
+      content="Anime Recommendations from MyAnimeList"
+    />
+    <meta
+      property="og:description"
+      content="Check out daily picks, top-ranked anime, and explore by genre."
+    />
+    <meta property="og:image" content="/banner.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourwebsite.com/" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="AnimeRec U+002d Anime Recommendations"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore top anime of the season, rankings, and personalized suggestions."
+    />
+    <meta name="twitter:image" content="/banner.png" />
   </head>
   <body>
     <div id="root"></div>
